# llm-inference

./: .gitignore  README.md  pyproject.toml
configs/examples/: local-smoke.yaml
configs/vllm/: single-gpu-smoke.yaml
src/llm_inference_experiments/: __init__.py  cli.py  commands.py  config.py  doctor.py  errors.py  experiment.py  manifest.py  metadata.py  models.py  nvidia.py  paths.py  placeholders.py  preflight.py  process.py  telemetry.py  vllm.py
src/llm_inference_experiments/probes/: __init__.py  vllm_environment.py
tests/: __init__.py  conftest.py  test_commands.py  test_config.py  test_experiment.py  test_metadata.py  test_nvidia.py  test_process.py  test_vllm.py
tests/fixtures/: fake_benchmark.py  fake_nvidia_smi.py  fake_server.py  fake_vllm.py
