[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-inference-experiments"
version = "0.1.0"
description = "Reproducible local orchestration for LLM inference experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.scripts]
llm-exp = "llm_inference_experiments.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_inference_experiments"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/llm_inference_experiments/cli.py" = ["B008"]
